add image display

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="app-body">
         <h1>Mutation Results</h1>
         <button id="MutationEventButton">Add data</button>
+        <input type="file" name="file" id="file">
         <div id="MutationResult"></div>
         <hr />
 
@@ -41,6 +42,8 @@
 
         <h1>Subscription Results</h1>
         <div id="SubscriptionResult"></div>
+        <img src="" alt="Formula One" id="s3url" width="200px" height="200px">
+        <div id="displayImageSection"></div>
     </div>
 </div>
 <script src="main.bundle.js"></script>
